--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
         "outDir": "dist/js", // destino dos arquivos gerados em TS para a pasta dist, em JS
-        "target": "ES6" // converter TS para JS na versão ECMAScript 6
+        "target": "ES6", // converter TS para JS na versão ECMAScript 6
+        "noEmitOnError": true // não serão gerados arquivos JS enquanto os arquivos TS não forem compilados com sucesso
     },
     "include": ["app/**/*"]   
     // todos os arquivos .ts que estiverem dentro da pasta app, serão considerados 
