--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,9 @@
     "compilerOptions": {
         "outDir": "dist/js", // destino dos arquivos gerados em TS para a pasta dist, em JS
         "target": "ES6", // converter TS para JS na versão ECMAScript 6
-        "noEmitOnError": true // não serão gerados arquivos JS enquanto os arquivos TS não forem compilados com sucesso
+        "noEmitOnError": true, // não serão gerados arquivos JS enquanto os arquivos TS não forem compilados com sucesso
+        "noImplicitAny": true // desabilita tipagem implícita do any 
     },
-    "include": ["app/**/*"]   
-    // todos os arquivos .ts que estiverem dentro da pasta app, serão considerados 
-    // para conversão em JS e serão "jogados" na pasta dist/js
+    "include": ["app/**/*"]  // todos os arquivos .ts que estiverem dentro da pasta app, serão considerados 
+                            // para conversão em JS e serão "jogados" na pasta dist/js
 }
